crates/next-custom-transforms/tests/errors/server-actions/client-graph/1/output.js
/* __next_internal_client_entry_do_not_use__ default auto */ export default function App() {
    async function fn() {
        'use server';
    }
    return <div>App</div>;
}
